--- a/uh.html
+++ b/uh.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
 <body>
+<head>
+<style>
+.center {
+    margin: auto;
+    width: 60%;
+    border: 3px solid #73AD21;
+    padding: 10px;
+}
+</style>
+</head>
+<body>
+
+<div class="center">
+  <p><b>SWBAT have an excellent understanding of puncuations and their rules</p>
+</div>
 
 <p><b>Commas </b> are a punctuation mark (,) which are meant to be a pause between parts of a sentence, It can also be used to separate items in a list, and to mark the place in large number.</p>
 
@@ -17,7 +32,7 @@
   <li>We saw a young golden retriever</li>  
 </ul>  
 
- <h4>First, try to add “and” between the 2 coordinate adjectives </h4>
+    <h4>First, try to add <q>and</q> between the 2 coordinate adjectives </h4>
   <ul>
   <li>We saw a happy and lively pug </li>
   <li>We saw a young and golden retriever</li>  
@@ -26,7 +41,7 @@
 <h4>Second, try reversing the adjectives around</h4>
   <ul>
   <li>We saw a lively happy pug </li>
-  <li>We saw a golden young retriever(This does not make sense when it is reversed, so it does not need a comma)</li>  
+  <li>We saw a golden young retriever (This does not make sense when it is reversed, so it does not need a comma)</li>  
 </ul> 
  
 <h4>Third, if  the sentence still makes sense, then separate it by a comma</h4>
@@ -37,7 +52,7 @@
 
   <h4>Rule 3. Use commas in a compound sentence; before FANBOYS</h4>
   <ul>
-  <li> Lauren read the paper, but she didn’t agree with its claim</li>
+  <li> Lauren read the paper, but she did not agree with its claim</li>
   <li>Maya had worked overnight, yet she completed her homework</li>  
 </ul>
 
@@ -59,17 +74,65 @@
   <li>The monkey is purple, it is strange</li>  
 </ul>
 
-<p><b>Colon</b> is a punctuation mark (:) which is used when it is introducing a quotation or a list of items or to separate two clauses</p>
+<p><b>Colon</b> is a punctuation mark (:) which is used when it is introducing a quotation or a list of items or to separate two clauses.</p>
   <ul>
   <li>The school specializes in four subjects: engineer, architecture, psychology, and computer programing</li>
-  <li>Julius Caesar spoke disappointed to Brutus: “Et tu, Brute?”</li>  
+      <li>Julius Caesar spoke disappointed to Brutus: <q>Et tu, Brute?</q></li>  
 </ul>
 
-<p><b>Quotation</b> Marks are a set of punctuation marks, single (‘ ’) or double (“ ”), they are used to mark the beginning and end of a title or quote</p>
+<p><b>Quotation Marks </b>are a set of punctuation marks, they are used to mark the beginning and end of a title or quote.</p>
   <ul>
-  <li>My teacher said “make sure to study for the finals”</li>
-  <li>My mother always told me “don’t talk to strangers”</li>  
+      <li>My teacher said <q>make sure to study for the finals</q></li>
+      <li>My mother always told me <q>don’t talk to strangers</q></li>  
 </ul>
 
+<p><b>Parentheses and Brackets</b> are a set of punctuation marks that are used to enclose explanatory or qualifying words.</p>
+  <ul>
+  <li>Earlier this month(April 1), molly had broke her nose</li>
+  <li>She had got an eighty (80) on her Chemistry test</li>  
+</ul>
+
+<p><b>Apostrophes</b> are a set of punctuation marks that are used to show claim/owner-shit or the omission of letters or numbers.</p> 
+  <ul>
+  <li>Ally's pen was stolen</li>
+  <li>My aunt had grauated college in 08'</li>  
+</ul>
+
+<p><b>Hyphens</b> are a the sign (-) that is used to join words together.</p>
+  <ul>
+  <li>I am looking for a short-term job</li>
+  <li>Jane was sitting next to my red-haired cousin,James </li>  
+</ul>
+
+<p><b>Dashes</b> indicate add emphasis, an interruption.</p>
+  <ul>
+  <li>I wish you would—oh, never mind</li>
+  <li>I pay the bills—she has all the fun</li>  
+</ul>
+
+
+<p><b>Ellipses</b> is a punctuation mark consisting of three dots.</p>
+  <ul>
+  <li>Juliet had said <q>where ought thou romeo...</q></li>
+  <li>In the Declaration Of Independence, it stated <q>We the people...</q></li>  
+</ul>
+
+<p><b>Question Marks</b> is a punctuation mark indicating a question.</p>
+  <ul>
+  <li>Did you finish your homework?</li>
+  <li>Can you please pass the gravey?</li>  
+</ul>
+
+<p><b>Explination Points</b> is a punctuation mark indicating emotion,suprisement.</p>
+  <ul>
+  <li>Yay! We won!</li>
+  <li>Abby screamed <q>Yay! I am going to Europe!</q></li>  
+</ul>
+
+<p><b>Periods</b> is a punctuation mark indicating the sentence is over.</p>
+  <ul>
+  <li>Today we are going to the mall.</li>
+  <li>I can not wait till it is Friday</q></li>  
+</ul>
 </body>
 </html>
